--- a/index.html
+++ b/index.html
@@ -230,10 +230,11 @@
 		<input class="hgt" id="hei" placeholder="       Enter your height in cm">
 		<input class="wgt" id="wei" placeholder="       Enter your weight in Kg">
 		<button class="but" id="buton" onclick="fun()">SUBMIT</button>
+
 	</div>
 
 	<div class="sec2" id="div2">
-		<h1 class="res">YOUR RESULT</h1><br>
+		<h1 class="res">YOUR BMI INDEX</h1><br>
 		<h3 class="value" id="result"></h3>
 		<div class="image" id="div3"></div>
 	</div>
